--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,12 +2,13 @@
 
 *, *::before, *::after{
     box-sizing: border-box;
-    /* outline: 1px solid #000; */
+    outline: 1px solid #000;
 }
 
 body{
     font-family: "Noto Sans TC", serif;
     color: $c-base;
+    line-height: normal;
 }
 
 img{
@@ -21,7 +22,7 @@ a{
     color: $c-base;
 }
 
-/* 通用樣式 */
+/* 工具類別 */
 
 .container{
     max-width: 1120px;
@@ -35,19 +36,19 @@ a{
 
     @include pc-991{
         max-width: 748px;
-        padding-left: 10px;
-        padding-right: 10px;
+/*         padding-left: 10px;
+        padding-right: 10px; */
     }
 
     @include mobile-767{
-        max-width: 355px;
-        padding-left: 10px;
-        padding-right: 10px;
+        max-width: 700px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
 
 .btn{
-    display: block;
+    display: inline-block;
     text-align: center;
     &-primary{
         background: $c-primary;
@@ -105,32 +106,33 @@ a{
     }
 }
 
-.title{
-    &-b{
-        font-weight: bold;
-    }
-    &-mb1{
-        margin-bottom: 1rem;
-    }
-    &-mb3{
-        margin-bottom: 3rem;
-        @include mobile-767{
-            margin-bottom: 2rem;
-        }
-    }
+.fw-bold{
+    font-weight: bold;
 }
 
 .ta-c{
     text-align: center;
 }
 
-.mb-block{
-    margin-bottom: 100px;
-    @include pc-1199{
-        margin-bottom: 80px;
+.ta-l{
+    text-align: left;
+}
+
+.mb{
+    &-1rem{
+        margin-bottom: 1rem;
     }
-    @include mobile-767{
-        margin-bottom: 60px;
+    &-3rem{
+        margin-bottom: 3rem;
+    }
+    &-block{
+        margin-bottom: 100px;
+        @include pc-1199{
+            margin-bottom: 80px;
+        }
+        @include mobile-767{
+            margin-bottom: 60px;
+        }
     }
 }
 
@@ -143,7 +145,7 @@ a{
     &-block{
         border-radius: 0.75rem;
         background: $c-blockGray;
-        padding: 1.5rem 0;
+        padding: 1.5rem 1rem;
         @include mobile-767{
             padding: 1rem 0;
         }
