--- a/scss/_breakpoints.scss
+++ b/scss/_breakpoints.scss
@@ -1,4 +1,4 @@
-/* 主要斷點 */
+// 主要斷點
 
 //以上大螢幕
 @mixin pc-1199{
@@ -23,7 +23,7 @@
 
 
 
-/* 微調斷點 */
+// 微調斷點
 
 @mixin pc-1440{
     @media (min-width: 1440px) {
