--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,4 +1,4 @@
-/* color */
+//color
 $c-primary: #56C4C5;
 $c-accent: #FF5D50;
 $c-base: #221E1F;
@@ -9,7 +9,7 @@ $c-decor-gray: #DDDDDD;
 $c-decor-yellow: #FFD153;
 $c-banner-gray: #F7F9FD;
 
-/* font size */
+//font size
 $fz-xxxl: 3rem;
 $fz-xxl: 2rem;
 $fz-xl: 1.5rem;
